# algorithms-research

./: CMakeLists.txt  README.md
cmake/: utils.cmake
extras/00/: 00_A.cpp  00_B.cpp  00_C.cpp  00_D.cpp
extras/01/: 01_D.cpp
extras/XX/: XX_B.cpp  XX_C.cpp
hometasks/: CMakeLists.txt
hometasks/01_hometask/: 01_alternating.cpp  02_brackets.cpp  03_minmax.cpp  04_circle.cpp  CMakeLists.txt  README.md
hometasks/02_hometask/: 01_window.cpp  02_football.cpp  03_merging.cpp  04_postman.cpp  05_alibaba.cpp  CMakeLists.txt
hometasks/03_hometask/: 01_fixedset.cpp  04_statistic.cpp  05_triangles.cpp  CMakeLists.txt
practice/: 01_knapsack.cpp  02_segments.cpp  03_colors.cpp  CMakeLists.txt
